[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chinook"
version = "1.1.3"
description = "Tools for tight-binding and simulation of ARPES"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ryan P. Day", email = "ryanday7@gmail.com" },
    { name = "Kimoon Han", email = "khan@kaist.ac.kr" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "joblib>=1.4.2",
    "llvmlite>=0.44.0.dev0 ; python_full_version >= '3.13'",
    "matplotlib>=3.10.0",
    "numba>=0.60.0",
    "numba>=0.61.0rc1 ; python_full_version >= '3.13'",
    "numba-progress>=1.1.0",
    "numpy>=2.0.2",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
]


[tool.hatch.build.targets.sdist]
include = ["atomic_mass.txt", "electron_configs.txt"]
